--- a/package.json
+++ b/package.json
@@ -3,18 +3,34 @@
   "version": "1.0.0",
   "description": "admin panel for react-native schedule application",
   "scripts": {
-    "dev": "webpack --mode development ./client/src/js/index.js --output ./public/main.js",
-    "build": "webpack --mode production ./client/src/js/index.js --output ./public/main.js"
+    "start": "webpack-dev-server --mode development --open",
+    "dev": "webpack --mode development ./client/src/index.js --output ./public/main.js",
+    "build": "webpack --mode production ./client/src/index.js --output ./public/main.js"
   },
   "main": "index.js",
   "repository": "https://github.com/Quernest/schedule-admin.git",
   "author": "Quernest <a.zhit4enko@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^8.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.7",
+    "postcss-loader": "^2.1.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
     "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.12"
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
+  },
+  "dependencies": {
+    "node-sass": "^4.7.2"
   }
 }
