--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
     "postcss-loader": "^2.1.3",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
@@ -41,6 +45,8 @@
     "jsonwebtoken": "^8.2.0",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
-    "node-sass": "^4.7.2"
+    "node-sass": "^4.7.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
