--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "admin panel for react-native schedule application",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "dev": "webpack --mode development ./client/src/index.js --output ./public/main.js",
-    "build": "webpack --mode production ./client/src/index.js --output ./public/main.js",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
     "server": "set NODE_ENV=production && node ./server/app.js",
     "dev-server": "set NODE_ENV=development && node ./server/app.js"
   },
@@ -29,10 +29,10 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
     "postcss-loader": "^2.1.3",
+    "prop-types": "^15.6.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
-    "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
   },
@@ -47,6 +47,10 @@
     "mysql": "^2.15.0",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.0",
+    "webpack": "^4.2.0",
+    "webpack-dev-middleware": "^3.0.1",
+    "webpack-hot-middleware": "^2.21.2"
   }
 }
