--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "admin panel for react-native schedule application",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
+    "start": "webpack-dev-server --config webpack.config.dev.js",
+    "dev": "webpack --config webpack.config.dev.js",
+    "build": "webpack --config webpack.config.prod.js",
     "server": "set NODE_ENV=production && node ./server/app.js",
     "dev-server": "set NODE_ENV=development && node ./server/app.js"
   },
@@ -28,17 +28,20 @@
     "eslint-plugin-react": "^7.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
+    "mini-css-extract-plugin": "^0.2.0",
     "postcss-loader": "^2.1.3",
     "prop-types": "^15.6.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.1",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "clean-webpack-plugin": "^0.1.19",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
