--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "html-webpack-plugin": "^3.0.7",
     "mini-css-extract-plugin": "^0.2.0",
     "postcss-loader": "^2.1.3",
-    "prop-types": "^15.6.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
@@ -41,6 +40,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.19",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
@@ -49,9 +49,11 @@
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "node-sass": "^4.7.2",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
+    "react-intl": "^2.4.0",
     "webpack": "^4.2.0",
     "webpack-dev-middleware": "^3.0.1",
     "webpack-hot-middleware": "^2.21.2"
