--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
-  "presets": ["env", "react", "stage-2"],
-  "plugins": ["react-hot-loader/babel"]
+  "presets": ["env", "react"],
+  "plugins": [
+    "react-hot-loader/babel",
+    "transform-object-rest-spread",
+    "transform-async-to-generator",
+    [
+      "transform-runtime",
+      {
+        "polyfill": false,
+        "regenerator": true
+      }
+    ]
+  ]
 }
