--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.0.0",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.7",
