--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "jsonwebtoken": "^8.2.0",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
