--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "node-sass": "^4.7.2",
+    "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
