--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "clean-webpack-plugin": "^0.1.19",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "jsonwebtoken": "^8.2.0",
