--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-spinners": "^0.2.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "webpack": "^4.2.0",
