--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-update": "^15.6.2",
     "react-datepicker": "^1.4.1",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
