--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "react-hot-loader/babel",
     "transform-object-rest-spread",
     "transform-async-to-generator",
+    "transform-class-properties",
     [
       "transform-runtime",
       {
