--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "file-loader": "^1.1.11",
     "jsonwebtoken": "^8.2.0",
     "moment": "^2.22.0",
+    "moment-weekdaysin": "^1.0.1",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "node-sass": "^4.7.2",
