--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-accessible-accordion": "^2.4.4",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-update": "^15.6.2",
     "react-datepicker": "^1.4.1",
